syntax = "proto3";
option java_package = "com.flipkart.protobuf.ext.generator.test.sample";
option java_multiple_files = true;
message MessageWithArray{
    repeated double double1=1;
    repeated float float1=2;
    repeated int32 int1=3;
    repeated int64 long1=4;
    repeated bool boolean1=5;
    repeated string string1=6;
}
