syntax = "proto3";
option java_package = "com.flipkart.protobuf.ext.generator.test.sample";
option java_multiple_files = true;
message MessageWithList{
    repeated int32 int_list=1;
    repeated int32 int_set=2;
}