syntax = "proto3";
option java_package = "com.flipkart.protobuf.ext.generator.test.sample";
option java_multiple_files = true;
message MessageWithMap{
    message stringToStringMapEntry{
        string key=1;
        string value=2;
    }
    repeated stringToStringMapEntry stringToStringMap=1;
    message stringToIntMapEntry{
        string key=1;
        int32 value=2;
    }
    repeated stringToIntMapEntry stringToIntMap=2;
}