syntax = "proto3";
option java_package = "com.flipkart.protobuf.ext.generator.test.sample";
option java_multiple_files = true;
message PlainMessage{
    double double1=1;
    float float1=2;
    int32 int1=3;
    int64 long1=4;
    bool boolean1=5;
    string string1=6;
    double double2=7;
    float float2=8;
    int32 int2=9;
    int64 long2=10;
    bool boolean2=11;
}