syntax = "proto3";
option java_package = "com.flipkart.protobuf.ext.generator.test.sample";
option java_multiple_files = true;
enum SampleEnumType {
    MOBILE=0;
    HOME=1;
    WORK=2;
}
message SampleMessage {
    string name=1;
    int32 id=2;
    string email=3;
    repeated SampleEnumType sampleEnumTypes=4;
}