syntax = "proto3";
option java_package = "com.flipkart.protobuf.ext.generator.test.sample";
option java_multiple_files = true;
message stringToStringMapEntry {
    string key=1;
    string value=2;
}
enum SampleEnumType {
    MOBILE=0;
    HOME=1;
    WORK=2;
}
message stringToEnumMapEntry {
    string key=1;
    SampleEnumType value=2;
}
message MessageWithTypeMap {
    repeated stringToStringMapEntry stringToStringMap=1;
    repeated stringToEnumMapEntry stringToEnumMap=2;
}